Changelog
=========

7.2.dev0 - (unreleased)
-----------------------

7.1 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

7.0 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

6.9 - (2017-05-22)
------------------
* Change: Run async ePub jobs in parallel
  [avoinea refs #84915]
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

6.8 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

6.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

6.6 - (2016-10-03)
------------------
* Change: Updated to use plone.stringinterp IContextWrapper adapter
  [avoinea]

6.5 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

6.4 - (2016-05-04)
------------------
* Update eea.translations with the latest translation strings -
  fixed errors in templates
  [chiridra refs #69753]

6.3 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

6.2 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]
* Bug fix: Added a way to know if the ePub is being generated even if the
  async worker is down or the queue is too busy.
  [voineali refs #23411]

6.1 - (2015-02-27)
------------------
* Bug fix: Fixed validation errors for exported ePubs (epubchecker)
  [avoinea]

6.0 - (2015-02-25)
------------------
* Upgrade step:
  I. Within "Plone > Site setup > Add-ons" install "EEA Converter"
  II. Within **Plone > Site setup > Content Rules**: