@@ -218,13 +218,7 @@ class AsyncExportView(ExportView):
             output=out, timeout=60, cleanup=[out]
         )
 
-        worker = queryUtility(IAsyncService)
-        queue = worker.getQueues()['']
-        worker.queueJobInQueue(queue, ('epub',),
-            async.run_async_job,
-            self.context, job,
-            success_event=AsyncEPUBExportSuccess,
-            fail_event=AsyncEPUBExportFail,
+        wrapper = IContextWrapper(self.context)(
             email=email,
             filepath=filepath,
             fileurl=fileurl,
@@ -234,7 +228,14 @@ class AsyncExportView(ExportView):
             title=title,
             etype='epub'
         )
-
+        worker = queryUtility(IAsyncService)
+        queue = worker.getQueues()['']
+        worker.queueJobInQueue(queue, ('epub',),
+            async.run_async_job,
+            wrapper, job,
+            success_event=AsyncEPUBExportSuccess,
+            fail_event=AsyncEPUBExportFail,
+        )
         return self.finish(email=email)
 
     def post(self, **kwargs):
