@@ -3,6 +3,8 @@ Changelog
 
 7.2.dev0 - (unreleased)
 -----------------------
+* Change: Make zc.async logs less verbose about ePub downloads
+  [avoinea]
 
 7.1 - (2017-12-12)
 ------------------
